[리팩토링] for 문 대신, stream 사용